--- a/embeded_54325.html
+++ b/embeded_54325.html
@@ -1,5 +1,6 @@
 <!-- 🪷 This project was developed by Ben (@InactiveBen) on Twitter and Discord. -->
 <!-- It is open-source on GitHub, and you're welcome to explore, use, or contribute to it: https://github.com/ReadyForBen/Minsun/tree/main -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -40,10 +41,12 @@
         }
         .loading {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
             background-color: #2E3238;
+            text-align: center;
         }
         .loading-circle {
             border: 8px solid #3A3F47;
@@ -52,10 +55,15 @@
             width: 60px;
             height: 60px;
             animation: spin 1s linear infinite;
+            margin-bottom: 20px;
         }
         @keyframes spin {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
+        }
+        .loading-text {
+            font-size: 1.5em;
+            color: #ddd;
         }
         .content {
             display: none;
@@ -92,20 +100,21 @@
             display: inline-block;
             margin: 5px;
             padding: 10px 20px;
-            background-color: #fa4463;
+            background-color: #320027; /* Dark Grayish-Purple */
             color: white;
             text-decoration: none;
             border-radius: 5px;
             font-weight: 600;
         }
         .button:hover {
-            background-color: #e03b57;
+            background-color: #0300FF; /* Bright Blue */
         }
     </style>
 </head>
 <body>
     <div class="loading">
         <div class="loading-circle"></div>
+        <div class="loading-text" id="loading-text">Loading.</div>
     </div>
     
     <div class="content">
@@ -119,11 +128,23 @@
     </div>
 
     <script>
+        let dots = 0;
+        const loadingText = document.getElementById('loading-text');
+
+        const loadingInterval = setInterval(function() {
+            dots = (dots + 1) % 4;
+            let dotStr = 'Loading' + '.'.repeat(dots);
+            loadingText.textContent = dotStr;
+        }, 500);
+
         setTimeout(function() {
-            document.querySelector('.loading').style.display = 'none';
-            document.querySelector('.content').style.display = 'block';
-        }, 5000);
+            clearInterval(loadingInterval);
+            loadingText.textContent = 'Welcome to Minsun!';
+            setTimeout(function() {
+                document.querySelector('.loading').style.display = 'none';
+                document.querySelector('.content').style.display = 'block';
+            }, 1500);
+        }, 4500);
     </script>
 </body>
 </html>
-
