--- a/embeded_54325.html
+++ b/embeded_54325.html
@@ -1,6 +1,5 @@
 <!-- 🪷 This project was developed by Ben (@InactiveBen) on Twitter and Discord. -->
 <!-- It is open-source on GitHub, and you're welcome to explore, use, or contribute to it: https://github.com/ReadyForBen/Minsun/tree/main -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -100,14 +99,34 @@
             display: inline-block;
             margin: 5px;
             padding: 10px 20px;
-            background-color: #320027; /* Dark Grayish-Purple */
+            background-color: #fa4463;
             color: white;
             text-decoration: none;
             border-radius: 5px;
             font-weight: 600;
+            position: relative;
+            overflow: hidden;
+            transition: color 0.4s;
+        }
+        .button::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 300%;
+            height: 300%;
+            background: rgba(255, 255, 255, 0.5);
+            transition: all 0.75s ease;
+            transform: translate(-50%, -50%) rotate(45deg);
+            opacity: 0;
+        }
+        .button:hover::before {
+            opacity: 1;
+            width: 150%;
+            height: 150%;
         }
         .button:hover {
-            background-color: #0300FF; /* Bright Blue */
+            color: #fff;
         }
     </style>
 </head>
@@ -148,3 +167,4 @@
     </script>
 </body>
 </html>
+
