--- a/embeded_54325.html
+++ b/embeded_54325.html
@@ -1,6 +1,5 @@
 <!-- 🪷 This project was developed by Ben (@InactiveBen) on Twitter and Discord. -->
 <!-- It is open-source on GitHub, and you're welcome to explore, use, or contribute to it: https://github.com/ReadyForBen/Minsun/tree/main -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -38,6 +37,8 @@
             background-color: #2E3238;
             font-family: 'Poppins', Arial, sans-serif;
             color: white;
+            overflow: hidden;
+            position: relative;
         }
         .loading {
             display: flex;
@@ -54,16 +55,12 @@
             border-radius: 50%;
             width: 60px;
             height: 60px;
-            animation: spin 1s linear infinite;
+            animation: spin 0.9s linear infinite;
             margin-bottom: 20px;
         }
         @keyframes spin {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
-        }
-        .loading-text {
-            font-size: 1.5em;
-            color: #ddd;
         }
         .content {
             display: none;
@@ -107,45 +104,44 @@
             font-weight: 600;
             position: relative;
             overflow: hidden;
-            transition: color 0.4s, background-color 0.4s;
+            transition: background-color 0.4s;
         }
         .button::before {
             content: '';
             position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 0;
-            height: 300%;
-            background: rgba(255, 255, 255, 0.5);
-            transition: all 0.5s ease;
-            transform: translate(-50%, -50%) rotate(45deg);
-            opacity: 0;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.2);
+            transform: skewX(-20deg);
+            transition: left 0.5s ease;
         }
         .button:hover::before {
-            width: 300%;
-            opacity: 1;
+            left: 100%;
         }
         .button:hover {
             background-color: #e03b57;
         }
-        .button:active {
-            transform: scale(0.95);
+        .page-fade-out {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #2E3238;
+            opacity: 0;
+            transition: opacity 0.8s ease;
+            z-index: 10;
         }
-        .fade-out {
-            animation: fadeOut 0.5s forwards;
-        }
-        @keyframes fadeOut {
-            to {
-                opacity: 0;
-                transform: scale(1.1);
-            }
+        .fade-in {
+            opacity: 1;
         }
     </style>
 </head>
 <body>
     <div class="loading">
         <div class="loading-circle"></div>
-        <div class="loading-text" id="loading-text">Loading.</div>
     </div>
     
     <div class="content">
@@ -157,33 +153,22 @@
             <a href="https://discord.gg/vS5B5hpc97" class="button" target="_blank" onclick="handleButtonClick(event)">Join our Discord</a>
         </div>
     </div>
+    
+    <div class="page-fade-out" id="page-fade-out"></div>
 
     <script>
-        let dots = 0;
-        const loadingText = document.getElementById('loading-text');
-
-        const loadingInterval = setInterval(function() {
-            dots = (dots + 1) % 4;
-            let dotStr = 'Loading' + '.'.repeat(dots);
-            loadingText.textContent = dotStr;
-        }, 500);
-
         setTimeout(function() {
-            clearInterval(loadingInterval);
-            loadingText.textContent = 'Welcome to Minsun!';
-            setTimeout(function() {
-                document.querySelector('.loading').style.display = 'none';
-                document.querySelector('.content').style.display = 'block';
-            }, 1500);
-        }, 4500);
+            document.querySelector('.loading').style.display = 'none';
+            document.querySelector('.content').style.display = 'block';
+        }, 900);
 
         function handleButtonClick(event) {
             event.preventDefault();
-            const button = event.currentTarget;
-            button.classList.add('fade-out');
+            const pageFadeOut = document.getElementById('page-fade-out');
+            pageFadeOut.classList.add('fade-in');
             setTimeout(function() {
-                window.location.href = button.href;
-            }, 500);
+                window.location.href = event.currentTarget.href;
+            }, 800);
         }
     </script>
 </body>
