--- a/404.html
+++ b/404.html
@@ -1,5 +1,6 @@
 <!-- 🪷 This project was developed by Ben (@InactiveBen) on Twitter and Discord. -->
 <!-- It is open-source on GitHub, and you're welcome to explore, use, or contribute to it: https://github.com/ReadyForBen/Minsun/tree/main -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -37,9 +38,12 @@
             background-color: #2E3238;
             font-family: 'Poppins', Arial, sans-serif;
             color: white;
-            text-align: center;
         }
         .content {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             text-align: center;
             max-width: 600px;
             padding: 20px;
@@ -48,19 +52,19 @@
             border-radius: 8px;
         }
         .content img {
-            width: 150px;
+            width: 200px;
             height: auto;
-            margin-bottom: 20px;
+            margin-bottom: -56px;
         }
         h1 {
             font-size: 3em;
             color: #fa4463;
-            margin-bottom: 20px;
+            margin-bottom: -21px;
         }
         p {
             font-size: 1.2em;
             color: #ddd;
-            margin-bottom: 30px;
+            margin-bottom: 13px;
         }
         .button {
             display: inline-block;
@@ -116,3 +120,4 @@
     </script>
 </body>
 </html>
+
